  * doc/install.html: minor.

socklog 1.4.1
Sat, 28 Feb 2004 17:47:13 +0000
  * socklog.c: handle sigterm on other platforms as accurately as already
    done on solaris.
  * tryto.c, uncat.c: minor cleanup.
  * check-diff, check-dist, check-local: new; run checks on programs.
  * socklog-conf.check, socklog.check, tryto.check, uncat.check,
    check-socklog-inet.c, check-socklog-unix.c: new; check program.
  * socklog-conf.dist, socklog.dist, tryto.dist, uncat.dist: new; dist check
    program output.
  * package/COPYING: 2004.
  * package/compile, package/install-man, package/upgrade: minor.

socklog 1.3.1
Mon, 19 Jan 2004 18:39:01 +0000
  * trysocketlib.c: new; check for libraries needed for socket() on some
    systems (solaris, thx Uffe Jakobsen).
  * Makefile: adapt.
  * socklog.c, socklog-conf.c: add defines automatically detecting solaris
    systems; now builds on solaris out-of-the-box (thx Uffe Jakobsen, Lars
    Uffmann).
  * doc/readme.solaris.html: adapt (thx Lars Uffmann).
  * print-cc.sh, print-ld.sh: head -1 -> head -n1.

socklog 1.3.0
Mon, 12 Jan 2004 19:06:56 +0000
  * socklog.c: add getopt-style command line options -r, -R for logging raw
    syslog messages without priority, facility conversion.
  * man/socklog.8: adapt.
  * doc/network.html: document old-style syslog network logging through UDP.
  * doc/index.html: change short description.
  * package/compile, package/install-man, package/upgrade: exit 1 on
    sub-shell failures.

socklog 1.2.0
Sat, 09 Aug 2003 18:08:20 +0200
  * socklog-conf.c: fix run file for socklog-unix service on solaris; use
    runit's chpst instead of setuidgid.
  * doc/install.html: remove obsolete note about setuidgid replacement.
  * doc/examples.html: adapt.
  * doc/index.html: adapt examples.
  * doc/benefits.html: minor.

socklog 1.1.1
Mon, 07 Jul 2003 09:59:08 +0200
  * socklog-conf.c: fix typos (thx Hleil Liu); use mail -s instead of
    mailsubj for the notify service.

socklog 1.1.0